[package]
name = "global-executor"
version = "0.0.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "Configure a global executor you can reuse everywhere"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Keruspe/global-executor"
homepage = "https://github.com/Keruspe/global-executor"
documentation = "https://docs.rs/global-executor"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
async-channel = "^1.4"
executor-trait = "^0.7"
once_cell = "^1.5"

[dev-dependencies]
async-trait = "^0.1.42"
async-global-executor = "^1.4"
blocking = "^1.0"
